# Overchage-alert

./: .gitignore  Overcharge-Alert.spec  pyproject.toml
scripts/: push-to-github.ps1
src/overcharge_alert/: __init__.py  __main__.py  config.json  config.py  main.py  notifier.py
