[project]
name = "overcharge-alert"
version = "0.1.0"
description = "Alert when battery charge crosses a configurable threshold while on AC power"
requires-python = ">=3.11"
dependencies = [
    "psutil>=6.0.0",
    "winotify>=1.1.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
overcharge-alert = "overcharge_alert.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/overcharge_alert"]

[tool.hatch.build.targets.sdist]
include = ["src/overcharge_alert"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
]

[tool.uv]
package = true

[tool.pyright]
extraPaths = ["src"]
